Update 9. try-finally보다는 try-with-resources를 사용하라.md

--- a/1. 객체 생성과 파괴/9. try-finally보다는 try-with-resources를 사용하라.md
+++ b/1. 객체 생성과 파괴/9. try-finally보다는 try-with-resources를 사용하라.md
@@ -27,7 +27,7 @@ static String firstLineOfFile(String path) throws IOException {
     4. close 메서드 에러만 표시되고 readLine 메서드 에러는 표시되지 않음
     
     ```
-    // 에러 예시 - readLine 에러만 표시됨
+    // 에러 예시 
     Exception in thread "main" java.lang.NullPointerException // close 예외 
         at org.example.hs.week03.TryFinally.fistLineOfFile
         at org.example.hs.week03.TryFinally.main
@@ -135,13 +135,15 @@ static void copy(String src, String dst) throws IOException {
 
 - 짧고 읽기 수월하다.
 
-### Throwable에 추가된 getSuppressed 메서드
+### Throwable에 추가된 getSuppressed 메서드   
+try-with-resources 상태에서 숨겨진 모든 예외들을 배열로 묶어 반환 
 ```Java
-// try-with-resources 상태에서 숨겨진 모든 예외들을 배열로 묶어 반ㅇ환 
+// Syntax
 public final Throwable[] getSuppressed()
 ```
 
 ```Java
+// getSuppressed 사용 예시
 public static void testException() throws Exception { 
 
     Exception suppressed = new ArrayIndexOutOfBoundsException(); 
@@ -166,6 +168,27 @@ public static void main(String[] args) throws Exception {
 } 
 ```
 ```
+// 출력
 Suppressed Exceptions:
 java.lang.ArrayIndexOutOfBoundsException
 ```
+
+### try-with-resources에서 catch절 사용   
+try문을 더 중첩하지 않고도 다수의 예외 처리 가능 
+
+```Java
+static String firstLineOfFile(String path, String defaultVal) {
+    try (BufferedReader br = new BufferedReader(new FileReader(path))) {
+        return br.readLine();
+    } catch (IOException e) {
+        return defaultVal;
+    }
+}
+```
+1. try-with-resources를 활용하여 BufferedReader 객체 생성시 예외 체크
+2. try문 안에서의 예외체크(readLine) - catch에서 예외 처리 진행   
+
+
+## 정리
+- 꼭 회수해야 하는 자원을 다룰 때, try-finally 대신 try-with-resources 를 사용
+- try-with-resources 를 사용하면 더 짧고 분명해지며, 쉽게 자원 회수 가능 
