Update 59. 라이브러리를 익히고 사용하라.md

--- a/9. 일반적인 프로그래밍 원칙/59. 라이브러리를 익히고 사용하라.md
+++ b/9. 일반적인 프로그래밍 원칙/59. 라이브러리를 익히고 사용하라.md
@@ -8,12 +8,12 @@ static int random(int n) {
 }
 ```
 ### 이 코드가 갖고있는 3가지 문제점
-1. n이 크지 않은 2의 제곱수라면 같은 수열이 반복될 가능성이 크다.
+1. **n이 크지 않은 2의 제곱수라면 같은 수열이 반복될 가능성이 크다.**
     - nextInt()의 반환값은 32비트 난수인데, 2의 거듭제곱은 아래부터 비트를 제거한다.
     - nextInt()로 인해 생성된 숫자에서 하위비트는 상위비트보다 규칙성을 가진다.
     - 참고 : https://www.javamex.com/tutorials/random_numbers/lcg_bit_positions.shtml
     
-2. n이 2의 제곱수가 아니라면 몇몇 숫자가 더 많은 빈도로 반환된다.
+2. **n이 2의 제곱수가 아니라면 몇몇 숫자가 더 많은 빈도로 반환된다.**
     ``` Java
     public static void main(String[] args) {
         int n = 2 * (Integer.MAX_VALUE / 3);
@@ -25,6 +25,7 @@ static int random(int n) {
     }
     ```
     ```
+    // 출력결과 
     666667
     ```
     - 무작위 수를 백만개 생성 후, 그중 중간값보다 작은 수가 몇개인지 출력   
@@ -33,7 +34,7 @@ static int random(int n) {
     - 무작위로 생성된 수 중에서 2/3 정도가 중간값보다 낮은 수로 쏠림
     - 일정한 확률로 난수를 생성하지 못함
     
-3. 지정된 범위 바깥의 수가 반환될 가능성이 있다.
+3. **지정된 범위 바깥의 수가 반환될 가능성이 있다.**
     - rnd.nextInt()가 반환한 값을 Math.abs를 이용해 음수가 아닌 정수로 매핑
     ``` Java
     System.out.println(Math.abs(Integer.MIN_VALUE));
@@ -53,14 +54,16 @@ static int random(int n) {
         return -x;
     }
     ```
-    ex) -(-1) = (~(0xFFFFFFFF)) + 1 = 0x00000000 + 1 = 0x00000001 = 1
-        -(Integer.MIN_VALUE) = (~(0x80000000)) + 1 = 0x7FFFFFFF + 1 = 0x80000000 = Integer.MIN_VALUE
+    ``` Java
+    -(-1) = (~(0xFFFFFFFF)) + 1 = 0x00000000 + 1 = 0x00000001 = 1
+    -(Integer.MIN_VALUE) = (~(0x80000000)) + 1 = 0x7FFFFFFF + 1 = 0x80000000 = Integer.MIN_VALUE
+    ```
         
 ### 표준 라이브러리를 사용하자.
 #### 장점 1. 오랜 기간 검증된 표준 라이브러리를 사용하면 전문가의 지식과 다른 프로그래머들의 경험을 쉽게 활용할 수 있다.
-1. 의사난수 생성기, 정수론, 2의 보수 계산을 공부
+1. **의사난수 생성기, 정수론, 2의 보수 계산을 공부**
     - 복잡하고 오랜시간 소요
-2. 알고리즘에 능통한 개발자가 개발하고, 전문가들이 검증한 Random.nextInt(int) 사용
+2. **알고리즘에 능통한 개발자가 개발하고, 전문가들이 검증한 Random.nextInt(int) 사용**
     ``` Java
     // 전문가가 구현한 복잡한 코드
     public int nextInt(int bound) {
@@ -80,10 +83,10 @@ static int random(int n) {
         }
     }
     ```
-3. 자바 7부터는 Random 클래스 대신 ThreadLocalRandom 클래스 사용
+3. **자바 7부터는 Random 클래스 대신 ThreadLocalRandom 클래스 사용**
     - Random보다 더 고품질의 무작위 수 생성
     - 속도가 훨씬 빠름
-4. 포크-조인 풀 또는 병렬 스트림에서는 SplittableRandom 클래스 사용
+4. **포크-조인 풀 또는 병렬 스트림에서는 SplittableRandom 클래스 사용**
     > <br>포크-조인 풀 (ForkJoinPool)</br>   
     > 병렬화할 수 있는 작업을 재귀적으로 작은 작업으로 분할한 다음에 서브태스크에 각각의 결과를 합쳐서 전체 결과를 만듦
     ![fork_join](https://user-images.githubusercontent.com/64248514/99935644-7bcf4600-2da4-11eb-9d28-a03f3acefa0f.png)
@@ -104,8 +107,9 @@ static int random(int n) {
 ### 현실
 메이저 릴리스마다 주목할 만한 수많은 기능이 라이브러리에 추가되지만, 많은 프로그래머는 그런 기능이 있는지 알지 못하고 대부분 직접 구현하여 프로그래밍을 한다. 
 
-    #### 예시
-    지정된 URL의 내용을 가져오는 명령줄 애플리케이션 작성
+#### 예시
+지정된 URL의 내용을 가져오는 명령줄 애플리케이션 작성   
+
     ``` Java
     // 자바 9 InputStream에 추가된 transferTo 메서드를 이용
     public static void main(String[] args) throws IOException {
@@ -115,23 +119,23 @@ static int random(int n) {
         }
     }
     ```
-    - 예전에는 작성하기 까다로웠지만 transferTo 메서드를 사용해 쉽게 구현
+- 예전에는 작성하기 까다로웠지만 transferTo 메서드를 사용해 쉽게 구현
 
-    #### 알아두어야 할 라이브러리 목록
-    1. java.lang, java.util, java.io 와 하위 패키지들
-    2. 컬렉션 프레임워크 (아이템 45~48)
-        - List, Set, Map
-        - 다수의 데이터를 쉽고 효과적으로 처리할 수 있도록 표준화된 방법 제공
-    3. 스트림 라이브러리
-        - 컬렉션의 저장 요소를 하나씩 참조해서 람다식으로 처리할 수 있도록 도와줌
-    4. java.util.concurrent의 동시성 기능 (아이템 80, 81)
-        - 멀티스레드 프로그래밍 작업을 단순화
-        - 능숙한 개발자가 자신만의 고수준 개념을 직접 구현할 수 있도록 도와주는 저수준 요소 제공
+#### 알아두어야 할 라이브러리 목록
+1. **java.lang, java.util, java.io 와 하위 패키지들**
+2. **컬렉션 프레임워크** (아이템 45~48)
+    - List, Set, Map
+    - 다수의 데이터를 쉽고 효과적으로 처리할 수 있도록 표준화된 방법 제공
+3. **스트림 라이브러리**
+    - 컬렉션의 저장 요소를 하나씩 참조해서 람다식으로 처리할 수 있도록 도와줌
+4. **java.util.concurrent의 동시성 기능** (아이템 80, 81)
+    - 멀티스레드 프로그래밍 작업을 단순화
+    - 능숙한 개발자가 자신만의 고수준 개념을 직접 구현할 수 있도록 도와주는 저수준 요소 제공
     
-    #### 표준 라이브러리에 원하는 기능이 없다면?
-    - 서드파티 라이브러리를 사용하자   
-        ex) Google Guava 라이브러리
-    - 서드파티 라이브러리에도 원하는 기능이 없을때 직접 구현하자
+#### 표준 라이브러리에 원하는 기능이 없다면?
+- 서드파티 라이브러리를 사용하자   
+    ex) Google Guava 라이브러리
+- 서드파티 라이브러리에도 원하는 기능이 없을때 직접 구현하자
     
 
 ### 정리
