--- a/9. 일반적인 프로그래밍 원칙/65. 리플렉션보다는 인터페이스를 사용하라.md
+++ b/9. 일반적인 프로그래밍 원칙/65. 리플렉션보다는 인터페이스를 사용하라.md
@@ -226,4 +226,13 @@ private static void fatalError(String msg) {
 - 가동할 수 있는 최소한의 환경(가장 오래된 버전)만을 지원하도록 컴파일한 후, 이후 버전의 클래스와 메서드 등은 리플렉션으로 접근   
 - 접근하려는 새로운 클래스나 메서드가 런타임에 존재하지 않을 수도 있으므로 같은 목적을 이룰 수 있는 대체 수단을 이용하거나 기능을 줄여 동작하는 등 적절한 조치 필요   
 
-> 예시를 찾을 수 없었다...   
+> ex) 스프링에서 런타임 시에 개발자가 등록한 빈을 어플리케이션에서 가져와 사용..?  
+
+
+# 결론   
+- 리플렉션은 복잡한 특수 시스템을 개발할 때 필요한 강력한 기능
+- 컴파일타임에는 알 수 없는 클래스를 사용하는 프로그램에 적합
+- 하지만, 단점이 많으므로 객체 생성에만 되도록 사용하고, 생성한 객체를 이용할 때는 적절한 인터페이스나 컴파일타임에 알 수 있는 상위 클래스로 형변환해 사용할 것  
+
+
+
